[package]
name = "desktop_app"
version = "0.1.0"
authors = ["Emilio Moretti <emilio.moretti@gmail.com>"]
edition = "2021"

[features]
default = [ "main_app/desktop" ]

[dependencies]
async-std = "1.12.0"
minifb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
main_app = { path = "../main_app", default-features = false }
